# TiDB for AI Documentation
# This project uses UV for fast dependency management
# Install UV: curl -LsSf https://astral.sh/uv/install.sh | sh
# Install deps: make install (which runs: uv pip install -e .)

[project]
name = "docs"
version = "0.1.0"
description = "The documentation for TiDB and its AI capabilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs-material>=9.6.12",
    "mkdocs-jupyter>=0.25.1",
    "mkdocstrings[python]>=0.29.1",
    "mkdocs>=1.6.1",
    "mkdocs-redirects>=1.2.2",
    "requests>=2.31.0",
    "PyYAML>=6.0",
]
